# ai-reviewer

./: .gitignore  pyproject.toml  ТЗ.md
src/ai_reviewer/: __init__.py  cache.py  cli.py  config.py  filters.py  history.py  hooks.py  llm_client.py  models.py  output.py  pipeline.py  precheck.py  target_resolver.py  token_tracker.py
src/ai_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ai_reviewer/prompts/: __init__.py
tests/: test_llm_client.py  test_pipeline.py  test_token_tracker.py
